[package]
name = "obs-do"
description = "WebSocket control utility for OBS Studio"
version = "0.1.12"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonhoo/obs-do.git"
categories = ["command-line-utilities"]
keywords = ["obs", "streaming", "websocket"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
obws = "0.14.0"
tokio = { version = "1.49.0", features = ["full"] }
directories = "6.0.0"
